# machine-learning

./: .gitignore  README.md  house.py  house_gif.py  house_multifeatures.py  house_multifeatures_gif.py  lasso_regression.py  setup.cfg  setup.py  todo.py
.github/prompts/: python_ml.prompt.md
docs/: notes.md
linear_regression/: closed_form_linear_regression.py  gradient_descent_linear_regression.py  house.py  house_price_predictor.py  linear_regression_interface.py  test_house_price_predictor.py
linear_regression/models/: closed_form_linear_regression.py  gradient_descent_linear_regression.py
machinelearning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
myenv/: pyvenv.cfg
old/: house_gif.py  house_random_forest.py  ridge.py  support_vector_regression.py
src/linear_regression/: gradient_descent_linear_regression.py  house_price_predictor.py
src/linear_regression/models/: linear_regression_interface.py
src/machinelearning.egg-info/: PKG-INFO  SOURCES.txt
src/visualizer/: interactive_model_visualizer.py  png_model_visualizer.py
tests/: test_house_price_predictor.py  test_png_model_visualizer.py
visualizer/: interactive_model_visualizer.py  model_visualizer.py  png_model_visualizer.py  test_png_model_visualizer.py
