[metadata]
name = machinelearning
version = 0.1.0
description = A machine learning project for house price prediction
author = Your Name
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = -v --tb=short